Bug 965237 - Make overflow-clip-box:content-box be the default for <input type=text/password/number> and <textarea>.  r=roc
UltraBlame original commit: c84d530c9a51aa689af55e9db2178095165630bb

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -115,6 +115,7 @@ textarea {
   -moz-user-select: text;
   text-shadow: none;
   word-wrap: break-word;
+  overflow-clip-box: content-box;
 }
 
 textarea > scrollbar {
@@ -137,6 +138,7 @@ textarea::-moz-placeholder {
   ime-mode: inherit;
   resize: inherit;
   -moz-control-character-visibility: visible;
+  overflow-clip-box: inherit;
 }
 
 textarea > .anonymous-div.wrap,
@@ -376,6 +378,11 @@ textarea:disabled {
 option:disabled,
 optgroup:disabled {
   background-color: transparent;
+}
+
+input[type="text"],
+input[type="password"] {
+  overflow-clip-box: content-box;
 }
 
 
@@ -899,6 +906,7 @@ input[type="number"] {
   
   -moz-binding: none;
   width: 149px; 
+  overflow-clip-box: content-box;
 }
 
 input[type=number]::-moz-number-wrapper {
